Fixed Errors in gulp file

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ name: Aaron Brown
 markdown: kramdown
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
+permalink: pretty
