--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Aaron Brown
 markdown: kramdown
 highlighter: pygments # or rouge or null
-exclude: ["node_modules", "gulpfile.js", "package.json"]
+exclude: ["node_modules", "gulpfile.js", "package.json", "/assets/images/src"]
 permalink: pretty
