--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "browser-sync": "^1.3.7",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "1.0.0",
+    "gulp-image-resize": "^0.12.0",
+    "gulp-imagemin": "^3.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-pngquant": "^5.0.0"
   },
   "repository": {
     "type": "git",
