--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^1.3.7",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "1.0.0",
+    "gulp-cache": "^0.4.6",
     "gulp-image-resize": "^0.12.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-plumber": "^1.1.0",
@@ -21,7 +22,8 @@
     "gulp-tinypng": "^1.0.2",
     "gulp-util": "^3.0.8",
     "imagemin-jpegtran": "^5.0.2",
-    "imagemin-pngquant": "^5.0.0"
+    "imagemin-pngquant": "^5.0.0",
+    "run-sequence": "^1.2.2"
   },
   "repository": {
     "type": "git",
